# urbanki-sovia-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  makefile  pyproject.toml
.streamlit/: config.toml
data/: model.pth
src/sovia/: config.py  main.py
src/sovia/application/: ergebnisse_verwalten_service.py  scan_service.py
src/sovia/data/model/: second_training_weights.pth
src/sovia/domain/: actions.py
src/sovia/infra/: DatabaseConnector.py  ImageLoader.py  SiameseNeuralNetwork.py
src/sovia/pages/: Anleitung.py  bereich_untersuchen.py  ergebnisse_verwalten.py  gebiete_bearbeiten.py  hausumringe_upload.py  konfiguration.py
src/sovia/utils/: file_handling.py
